sintatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list class
Rule 3     class_list -> class
Rule 4     class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
Rule 5     class -> CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
Rule 6     feature_list -> feature_list feature
Rule 7     feature_list -> feature
Rule 8     feature_list -> epsilon
Rule 9     feature -> ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
Rule 10    feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
Rule 11    feature -> ID DOISPONTOS TIPO PONTOEVIRGULA
Rule 12    feature -> ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
Rule 13    feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA
Rule 14    formal_list -> formal_list VIRGULA formal
Rule 15    formal_list -> formal
Rule 16    formal_list -> epsilon
Rule 17    formal -> ID DOISPONTOS TIPO
Rule 18    expr_list -> expr_list VIRGULA expr
Rule 19    expr_list -> expr
Rule 20    expr_list -> epsilon
Rule 21    expr_list -> expr_list VIRGULA error
Rule 22    expr -> ID OP_ATRIBUICAO expr
Rule 23    expr -> expr ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
Rule 24    expr -> expr PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
Rule 25    expr -> ID ABRE_PARENTESE expr_list FECHA_PARENTESE
Rule 26    expr -> ID ABRE_PARENTESE error FECHA_PARENTESE
Rule 27    expr -> IF expr THEN expr ELSE expr FI
Rule 28    expr -> WHILE expr LOOP expr POOL
Rule 29    expr -> ABRE_CHAVES expr_block_list FECHA_CHAVES
Rule 30    expr_block_list -> expr_block_list expr PONTOEVIRGULA
Rule 31    expr_block_list -> expr PONTOEVIRGULA
Rule 32    expr_block_list -> expr_block_list error PONTOEVIRGULA
Rule 33    expr_block_list -> error PONTOEVIRGULA
Rule 34    expr -> LET ID DOISPONTOS TIPO OP_ATRIBUICAO expr expr_id_list IN expr
Rule 35    expr -> LET ID DOISPONTOS TIPO expr_id_list IN expr
Rule 36    expr_id_list -> expr_id_list VIRGULA ID DOISPONTOS TIPO OP_ATRIBUICAO expr
Rule 37    expr_id_list -> expr_id_list VIRGULA ID DOISPONTOS TIPO
Rule 38    expr_id_list -> epsilon
Rule 39    expr_id_list -> error VIRGULA ID DOISPONTOS TIPO OP_ATRIBUICAO expr
Rule 40    expr_id_list -> error VIRGULA ID DOISPONTOS TIPO
Rule 41    expr -> CASE expr OF expr_case_list ESAC
Rule 42    expr_case_list -> expr_case_list ID DOISPONTOS TIPO SETA expr PONTOEVIRGULA
Rule 43    expr_case_list -> ID DOISPONTOS TIPO SETA expr PONTOEVIRGULA
Rule 44    expr_case_list -> expr_case_list ID DOISPONTOS TIPO SETA error PONTOEVIRGULA
Rule 45    expr -> NEW TIPO
Rule 46    expr -> ISVOID expr
Rule 47    expr -> NOT expr
Rule 48    expr -> expr OP_MAIS expr
Rule 49    expr -> expr OP_MENOS expr
Rule 50    expr -> expr OP_MULT expr
Rule 51    expr -> expr OP_DIV expr
Rule 52    expr -> OP_NEGACAO expr
Rule 53    expr -> expr OP_MENOR expr
Rule 54    expr -> expr OP_MENORIGUAL expr
Rule 55    expr -> expr OP_IGUAL expr
Rule 56    expr -> ABRE_PARENTESE expr FECHA_PARENTESE
Rule 57    expr -> ID
Rule 58    expr -> INTEIRO
Rule 59    expr -> STRING
Rule 60    expr -> TRUE
Rule 61    expr -> FALSE
Rule 62    expr -> REAL
Rule 63    epsilon -> <empty>

Terminals, with rules where they appear

ABRE_CHAVES          : 4 5 9 12 29
ABRE_PARENTESE       : 9 12 23 24 25 26 56
ARROBA               : 23
CASE                 : 41
CLASS                : 4 5
DOISPONTOS           : 9 10 11 12 13 17 34 35 36 37 39 40 42 43 44
ELSE                 : 27
ESAC                 : 41
FALSE                : 61
FECHA_CHAVES         : 4 5 9 12 29
FECHA_PARENTESE      : 9 12 23 24 25 26 56
FI                   : 27
ID                   : 9 10 11 12 13 17 22 23 24 25 26 34 35 36 37 39 40 42 43 44 57
IF                   : 27
IN                   : 34 35
INHERITS             : 4
INTEIRO              : 58
ISVOID               : 46
LET                  : 34 35
LOOP                 : 28
NEW                  : 45
NOT                  : 47
OF                   : 41
OP_ATRIBUICAO        : 10 13 22 34 36 39
OP_DIV               : 51
OP_IGUAL             : 55
OP_MAIS              : 48
OP_MENOR             : 53
OP_MENORIGUAL        : 54
OP_MENOS             : 49
OP_MULT              : 50
OP_NEGACAO           : 52
PONTO                : 23 24
PONTOEVIRGULA        : 4 5 9 10 11 12 13 30 31 32 33 42 43 44
POOL                 : 28
REAL                 : 62
SETA                 : 42 43 44
STRING               : 59
THEN                 : 27
TIPO                 : 4 4 5 9 10 11 12 13 17 23 34 35 36 37 39 40 42 43 44 45
TRUE                 : 60
VIRGULA              : 14 18 21 36 37 39 40
WHILE                : 28
error                : 12 13 21 26 32 33 39 40 44

Nonterminals, with rules where they appear

class                : 2 3
class_list           : 1 2
epsilon              : 8 16 20 38
expr                 : 9 10 12 18 19 22 23 24 27 27 27 28 28 30 31 34 34 35 36 39 41 42 43 46 47 48 48 49 49 50 50 51 51 52 53 53 54 54 55 55 56
expr_block_list      : 29 30 32
expr_case_list       : 41 42 44
expr_id_list         : 34 35 36 37
expr_list            : 18 21 23 24 25
feature              : 6 7
feature_list         : 4 5 6
formal               : 14 15
formal_list          : 9 14
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list class
    (3) class_list -> . class
    (4) class -> . CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
    (5) class -> . CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (2) class_list -> class_list . class
    (4) class -> . CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
    (5) class -> . CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) class_list -> class .

    CLASS           reduce using rule 3 (class_list -> class .)
    $end            reduce using rule 3 (class_list -> class .)


state 4

    (4) class -> CLASS . TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
    (5) class -> CLASS . TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    TIPO            shift and go to state 6


state 5

    (2) class_list -> class_list class .

    CLASS           reduce using rule 2 (class_list -> class_list class .)
    $end            reduce using rule 2 (class_list -> class_list class .)


state 6

    (4) class -> CLASS TIPO . INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA
    (5) class -> CLASS TIPO . ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    INHERITS        shift and go to state 7
    ABRE_CHAVES     shift and go to state 8


state 7

    (4) class -> CLASS TIPO INHERITS . TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    TIPO            shift and go to state 9


state 8

    (5) class -> CLASS TIPO ABRE_CHAVES . feature_list FECHA_CHAVES PONTOEVIRGULA
    (6) feature_list -> . feature_list feature
    (7) feature_list -> . feature
    (8) feature_list -> . epsilon
    (9) feature -> . ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . ID DOISPONTOS TIPO PONTOEVIRGULA
    (12) feature -> . ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (13) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA
    (63) epsilon -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 13
    FECHA_CHAVES    reduce using rule 63 (epsilon -> .)

  ! ID              [ reduce using rule 63 (epsilon -> .) ]

    feature_list                   shift and go to state 10
    feature                        shift and go to state 11
    epsilon                        shift and go to state 12

state 9

    (4) class -> CLASS TIPO INHERITS TIPO . ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA

    ABRE_CHAVES     shift and go to state 14


state 10

    (5) class -> CLASS TIPO ABRE_CHAVES feature_list . FECHA_CHAVES PONTOEVIRGULA
    (6) feature_list -> feature_list . feature
    (9) feature -> . ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . ID DOISPONTOS TIPO PONTOEVIRGULA
    (12) feature -> . ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (13) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA

    FECHA_CHAVES    shift and go to state 15
    ID              shift and go to state 13

    feature                        shift and go to state 16

state 11

    (7) feature_list -> feature .

    FECHA_CHAVES    reduce using rule 7 (feature_list -> feature .)
    ID              reduce using rule 7 (feature_list -> feature .)


state 12

    (8) feature_list -> epsilon .

    FECHA_CHAVES    reduce using rule 8 (feature_list -> epsilon .)
    ID              reduce using rule 8 (feature_list -> epsilon .)


state 13

    (9) feature -> ID . ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (10) feature -> ID . DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> ID . DOISPONTOS TIPO PONTOEVIRGULA
    (12) feature -> ID . ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (13) feature -> ID . DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA

    ABRE_PARENTESE  shift and go to state 17
    DOISPONTOS      shift and go to state 18


state 14

    (4) class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES . feature_list FECHA_CHAVES PONTOEVIRGULA
    (6) feature_list -> . feature_list feature
    (7) feature_list -> . feature
    (8) feature_list -> . epsilon
    (9) feature -> . ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . ID DOISPONTOS TIPO PONTOEVIRGULA
    (12) feature -> . ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (13) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA
    (63) epsilon -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 13
    FECHA_CHAVES    reduce using rule 63 (epsilon -> .)

  ! ID              [ reduce using rule 63 (epsilon -> .) ]

    feature_list                   shift and go to state 19
    feature                        shift and go to state 11
    epsilon                        shift and go to state 12

state 15

    (5) class -> CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 20


state 16

    (6) feature_list -> feature_list feature .

    FECHA_CHAVES    reduce using rule 6 (feature_list -> feature_list feature .)
    ID              reduce using rule 6 (feature_list -> feature_list feature .)


state 17

    (9) feature -> ID ABRE_PARENTESE . formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (12) feature -> ID ABRE_PARENTESE . error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (14) formal_list -> . formal_list VIRGULA formal
    (15) formal_list -> . formal
    (16) formal_list -> . epsilon
    (17) formal -> . ID DOISPONTOS TIPO
    (63) epsilon -> .

    error           shift and go to state 23
    ID              shift and go to state 21
    FECHA_PARENTESE reduce using rule 63 (epsilon -> .)
    VIRGULA         reduce using rule 63 (epsilon -> .)

    formal_list                    shift and go to state 22
    formal                         shift and go to state 24
    epsilon                        shift and go to state 25

state 18

    (10) feature -> ID DOISPONTOS . TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> ID DOISPONTOS . TIPO PONTOEVIRGULA
    (13) feature -> ID DOISPONTOS . TIPO OP_ATRIBUICAO error PONTOEVIRGULA

    TIPO            shift and go to state 26


state 19

    (4) class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list . FECHA_CHAVES PONTOEVIRGULA
    (6) feature_list -> feature_list . feature
    (9) feature -> . ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . ID DOISPONTOS TIPO PONTOEVIRGULA
    (12) feature -> . ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (13) feature -> . ID DOISPONTOS TIPO OP_ATRIBUICAO error PONTOEVIRGULA

    FECHA_CHAVES    shift and go to state 27
    ID              shift and go to state 13

    feature                        shift and go to state 16

state 20

    (5) class -> CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .

    CLASS           reduce using rule 5 (class -> CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .)
    $end            reduce using rule 5 (class -> CLASS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .)


state 21

    (17) formal -> ID . DOISPONTOS TIPO

    DOISPONTOS      shift and go to state 28


state 22

    (9) feature -> ID ABRE_PARENTESE formal_list . FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA
    (14) formal_list -> formal_list . VIRGULA formal

    FECHA_PARENTESE shift and go to state 29
    VIRGULA         shift and go to state 30


state 23

    (12) feature -> ID ABRE_PARENTESE error . FECHA_PARENTESE DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA

    FECHA_PARENTESE shift and go to state 31


state 24

    (15) formal_list -> formal .

    FECHA_PARENTESE reduce using rule 15 (formal_list -> formal .)
    VIRGULA         reduce using rule 15 (formal_list -> formal .)


state 25

    (16) formal_list -> epsilon .

    FECHA_PARENTESE reduce using rule 16 (formal_list -> epsilon .)
    VIRGULA         reduce using rule 16 (formal_list -> epsilon .)


state 26

    (10) feature -> ID DOISPONTOS TIPO . OP_ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> ID DOISPONTOS TIPO . PONTOEVIRGULA
    (13) feature -> ID DOISPONTOS TIPO . OP_ATRIBUICAO error PONTOEVIRGULA

    OP_ATRIBUICAO   shift and go to state 32
    PONTOEVIRGULA   shift and go to state 33


state 27

    (4) class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 34


state 28

    (17) formal -> ID DOISPONTOS . TIPO

    TIPO            shift and go to state 35


state 29

    (9) feature -> ID ABRE_PARENTESE formal_list FECHA_PARENTESE . DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA

    DOISPONTOS      shift and go to state 36


state 30

    (14) formal_list -> formal_list VIRGULA . formal
    (17) formal -> . ID DOISPONTOS TIPO

    ID              shift and go to state 21

    formal                         shift and go to state 37

state 31

    (12) feature -> ID ABRE_PARENTESE error FECHA_PARENTESE . DOISPONTOS TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA

    DOISPONTOS      shift and go to state 38


state 32

    (10) feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO . expr PONTOEVIRGULA
    (13) feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO . error PONTOEVIRGULA
    (22) expr -> . ID OP_ATRIBUICAO expr
    (23) expr -> . expr ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (24) expr -> . expr PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (25) expr -> . ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (26) expr -> . ID ABRE_PARENTESE error FECHA_PARENTESE
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . ABRE_CHAVES expr_block_list FECHA_CHAVES
    (34) expr -> . LET ID DOISPONTOS TIPO OP_ATRIBUICAO expr expr_id_list IN expr
    (35) expr -> . LET ID DOISPONTOS TIPO expr_id_list IN expr
    (41) expr -> . CASE expr OF expr_case_list ESAC
    (45) expr -> . NEW TIPO
    (46) expr -> . ISVOID expr
    (47) expr -> . NOT expr
    (48) expr -> . expr OP_MAIS expr
    (49) expr -> . expr OP_MENOS expr
    (50) expr -> . expr OP_MULT expr
    (51) expr -> . expr OP_DIV expr
    (52) expr -> . OP_NEGACAO expr
    (53) expr -> . expr OP_MENOR expr
    (54) expr -> . expr OP_MENORIGUAL expr
    (55) expr -> . expr OP_IGUAL expr
    (56) expr -> . ABRE_PARENTESE expr FECHA_PARENTESE
    (57) expr -> . ID
    (58) expr -> . INTEIRO
    (59) expr -> . STRING
    (60) expr -> . TRUE
    (61) expr -> . FALSE
    (62) expr -> . REAL

    error           shift and go to state 41
    ID              shift and go to state 39
    IF              shift and go to state 43
    WHILE           shift and go to state 44
    ABRE_CHAVES     shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    ISVOID          shift and go to state 49
    NOT             shift and go to state 50
    OP_NEGACAO      shift and go to state 51
    ABRE_PARENTESE  shift and go to state 42
    INTEIRO         shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    REAL            shift and go to state 56

    expr                           shift and go to state 40

state 33

    (11) feature -> ID DOISPONTOS TIPO PONTOEVIRGULA .

    FECHA_CHAVES    reduce using rule 11 (feature -> ID DOISPONTOS TIPO PONTOEVIRGULA .)
    ID              reduce using rule 11 (feature -> ID DOISPONTOS TIPO PONTOEVIRGULA .)


state 34

    (4) class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .

    CLASS           reduce using rule 4 (class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .)
    $end            reduce using rule 4 (class -> CLASS TIPO INHERITS TIPO ABRE_CHAVES feature_list FECHA_CHAVES PONTOEVIRGULA .)


state 35

    (17) formal -> ID DOISPONTOS TIPO .

    FECHA_PARENTESE reduce using rule 17 (formal -> ID DOISPONTOS TIPO .)
    VIRGULA         reduce using rule 17 (formal -> ID DOISPONTOS TIPO .)


state 36

    (9) feature -> ID ABRE_PARENTESE formal_list FECHA_PARENTESE DOISPONTOS . TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA

    TIPO            shift and go to state 57


state 37

    (14) formal_list -> formal_list VIRGULA formal .

    FECHA_PARENTESE reduce using rule 14 (formal_list -> formal_list VIRGULA formal .)
    VIRGULA         reduce using rule 14 (formal_list -> formal_list VIRGULA formal .)


state 38

    (12) feature -> ID ABRE_PARENTESE error FECHA_PARENTESE DOISPONTOS . TIPO ABRE_CHAVES expr FECHA_CHAVES PONTOEVIRGULA

    TIPO            shift and go to state 58


state 39

    (22) expr -> ID . OP_ATRIBUICAO expr
    (25) expr -> ID . ABRE_PARENTESE expr_list FECHA_PARENTESE
    (26) expr -> ID . ABRE_PARENTESE error FECHA_PARENTESE
    (57) expr -> ID .

    OP_ATRIBUICAO   shift and go to state 59
    ABRE_PARENTESE  shift and go to state 60
    PONTOEVIRGULA   reduce using rule 57 (expr -> ID .)
    ARROBA          reduce using rule 57 (expr -> ID .)
    PONTO           reduce using rule 57 (expr -> ID .)
    OP_MAIS         reduce using rule 57 (expr -> ID .)
    OP_MENOS        reduce using rule 57 (expr -> ID .)
    OP_MULT         reduce using rule 57 (expr -> ID .)
    OP_DIV          reduce using rule 57 (expr -> ID .)
    OP_MENOR        reduce using rule 57 (expr -> ID .)
    OP_MENORIGUAL   reduce using rule 57 (expr -> ID .)
    OP_IGUAL        reduce using rule 57 (expr -> ID .)
    FECHA_PARENTESE reduce using rule 57 (expr -> ID .)
    THEN            reduce using rule 57 (expr -> ID .)
    LOOP            reduce using rule 57 (expr -> ID .)
    OF              reduce using rule 57 (expr -> ID .)
    VIRGULA         reduce using rule 57 (expr -> ID .)
    FECHA_CHAVES    reduce using rule 57 (expr -> ID .)
    ELSE            reduce using rule 57 (expr -> ID .)
    POOL            reduce using rule 57 (expr -> ID .)
    FI              reduce using rule 57 (expr -> ID .)
    error           reduce using rule 57 (expr -> ID .)
    IN              reduce using rule 57 (expr -> ID .)


state 40

    (10) feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO expr . PONTOEVIRGULA
    (23) expr -> expr . ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (24) expr -> expr . PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (48) expr -> expr . OP_MAIS expr
    (49) expr -> expr . OP_MENOS expr
    (50) expr -> expr . OP_MULT expr
    (51) expr -> expr . OP_DIV expr
    (53) expr -> expr . OP_MENOR expr
    (54) expr -> expr . OP_MENORIGUAL expr
    (55) expr -> expr . OP_IGUAL expr

    PONTOEVIRGULA   shift and go to state 61
    ARROBA          shift and go to state 62
    PONTO           shift and go to state 63
    OP_MAIS         shift and go to state 64
    OP_MENOS        shift and go to state 65
    OP_MULT         shift and go to state 66
    OP_DIV          shift and go to state 67
    OP_MENOR        shift and go to state 68
    OP_MENORIGUAL   shift and go to state 69
    OP_IGUAL        shift and go to state 70


state 41

    (13) feature -> ID DOISPONTOS TIPO OP_ATRIBUICAO error . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 71


state 42

    (56) expr -> ABRE_PARENTESE . expr FECHA_PARENTESE
    (22) expr -> . ID OP_ATRIBUICAO expr
    (23) expr -> . expr ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (24) expr -> . expr PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (25) expr -> . ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (26) expr -> . ID ABRE_PARENTESE error FECHA_PARENTESE
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . ABRE_CHAVES expr_block_list FECHA_CHAVES
    (34) expr -> . LET ID DOISPONTOS TIPO OP_ATRIBUICAO expr expr_id_list IN expr
    (35) expr -> . LET ID DOISPONTOS TIPO expr_id_list IN expr
    (41) expr -> . CASE expr OF expr_case_list ESAC
    (45) expr -> . NEW TIPO
    (46) expr -> . ISVOID expr
    (47) expr -> . NOT expr
    (48) expr -> . expr OP_MAIS expr
    (49) expr -> . expr OP_MENOS expr
    (50) expr -> . expr OP_MULT expr
    (51) expr -> . expr OP_DIV expr
    (52) expr -> . OP_NEGACAO expr
    (53) expr -> . expr OP_MENOR expr
    (54) expr -> . expr OP_MENORIGUAL expr
    (55) expr -> . expr OP_IGUAL expr
    (56) expr -> . ABRE_PARENTESE expr FECHA_PARENTESE
    (57) expr -> . ID
    (58) expr -> . INTEIRO
    (59) expr -> . STRING
    (60) expr -> . TRUE
    (61) expr -> . FALSE
    (62) expr -> . REAL

    ID              shift and go to state 39
    IF              shift and go to state 43
    WHILE           shift and go to state 44
    ABRE_CHAVES     shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    ISVOID          shift and go to state 49
    NOT             shift and go to state 50
    OP_NEGACAO      shift and go to state 51
    ABRE_PARENTESE  shift and go to state 42
    INTEIRO         shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    REAL            shift and go to state 56

    expr                           shift and go to state 72

state 43

    (27) expr -> IF . expr THEN expr ELSE expr FI
    (22) expr -> . ID OP_ATRIBUICAO expr
    (23) expr -> . expr ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (24) expr -> . expr PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (25) expr -> . ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (26) expr -> . ID ABRE_PARENTESE error FECHA_PARENTESE
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . ABRE_CHAVES expr_block_list FECHA_CHAVES
    (34) expr -> . LET ID DOISPONTOS TIPO OP_ATRIBUICAO expr expr_id_list IN expr
    (35) expr -> . LET ID DOISPONTOS TIPO expr_id_list IN expr
    (41) expr -> . CASE expr OF expr_case_list ESAC
    (45) expr -> . NEW TIPO
    (46) expr -> . ISVOID expr
    (47) expr -> . NOT expr
    (48) expr -> . expr OP_MAIS expr
    (49) expr -> . expr OP_MENOS expr
    (50) expr -> . expr OP_MULT expr
    (51) expr -> . expr OP_DIV expr
    (52) expr -> . OP_NEGACAO expr
    (53) expr -> . expr OP_MENOR expr
    (54) expr -> . expr OP_MENORIGUAL expr
    (55) expr -> . expr OP_IGUAL expr
    (56) expr -> . ABRE_PARENTESE expr FECHA_PARENTESE
    (57) expr -> . ID
    (58) expr -> . INTEIRO
    (59) expr -> . STRING
    (60) expr -> . TRUE
    (61) expr -> . FALSE
    (62) expr -> . REAL

    ID              shift and go to state 39
    IF              shift and go to state 43
    WHILE           shift and go to state 44
    ABRE_CHAVES     shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    ISVOID          shift and go to state 49
    NOT             shift and go to state 50
    OP_NEGACAO      shift and go to state 51
    ABRE_PARENTESE  shift and go to state 42
    INTEIRO         shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    REAL            shift and go to state 56

    expr                           shift and go to state 73

state 44

    (28) expr -> WHILE . expr LOOP expr POOL
    (22) expr -> . ID OP_ATRIBUICAO expr
    (23) expr -> . expr ARROBA TIPO PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (24) expr -> . expr PONTO ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (25) expr -> . ID ABRE_PARENTESE expr_list FECHA_PARENTESE
    (26) expr -> . ID ABRE_PARENTESE error FECHA_PARENTESE
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . ABRE_CHAVES expr_block_list FECHA_CHAVES
    (34) expr -> . LET ID DOISPONTOS TIPO OP_ATRIBUICAO expr expr_id_list IN expr
    (35) expr -> . LET ID DOISPONTOS TIPO expr_id_list IN expr
    (41) expr -> . CASE expr OF expr_case_list ESAC
    (45) expr -> . NEW TIPO
    (46) expr -> . ISVOID expr
    (47) expr -> . NOT expr
    (48) expr -> . expr OP_MAIS expr
    (49) expr -> . expr OP_MENOS expr
    (50) expr -> . expr OP_MULT expr
    (51) expr -> . expr OP_DIV expr
    (52) expr -> . OP_NEGACAO expr
    (53) expr -> . expr OP_MENOR expr
    (54) expr -> . expr OP_MENORIGUAL expr
    (55) expr -> . expr OP_IGUAL expr
    (56) expr -> . ABRE_PARENTESE expr FECHA_PARENTESE
    (57) expr -> . ID
    (58) expr -> . INTEIRO
    (59) expr -> . STRING
    (60) expr -> . TRUE
    (61) expr -> . FALSE
    (62) expr -> . REAL

    ID              shift and go to state 39
    IF              shift and go to state 43
    WHILE           shift and go to state 44
    ABRE_CHAVES     shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    ISVOID          shift and go to state 49
    NOT             shift and go to state 50
    OP_NEGACAO      shift and go to state 51
    ABRE_PARENTESE  shift and go to state 42
    INTEIRO         shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    REAL            shift and go to state 56

    expr                           shift and go to state 74

state 45
